# dev-swiss-army

./: README.md
crates/dev-swiss/: Cargo.toml
crates/dev-swiss-core/: Cargo.toml
crates/dev-swiss-core/src/: convert.rs  lib.rs  password.rs  qrcode.rs
crates/dev-swiss/src/: main.rs
crates/dev-swiss/src/commands/: convert.rs  mod.rs  password.rs  qrcode.rs
docs/: convert.md  password.md  qrcode.md
docs/plans/: 2026-02-02-dev-swiss-design.md  2026-02-04-convert-command-design.md  2026-02-04-convert-command.md
