[package]
name = "dev-swiss-core"
version = "0.1.0"
edition = "2021"
description = "Core library for dev-swiss CLI toolkit"

[dependencies]
rand = "0.8"
qrcode = "0.14"
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
reqwest = { version = "0.12", optional = true, features = ["blocking", "json"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }

[features]
default = ["image-output"]
image-output = ["image"]
ai-generation = ["reqwest", "image", "serde", "serde_json", "base64"]
