[package]
name = "dev-swiss"
version = "0.1.0"
edition = "2021"
description = "A Swiss Army knife CLI toolkit for developers"

[[bin]]
name = "dev-swiss"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dev-swiss-core = { path = "../dev-swiss-core", features = ["image-output", "convert"] }

[features]
default = ["convert"]
ai-generation = ["dev-swiss-core/ai-generation"]
convert = ["dev-swiss-core/convert"]
